# odoo-doctor

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRODUCT_REVIEW.md  PR_SUMMARY.md  README.md  action.yml  odoo-doctor-proposal.md  pyproject.toml
.github/workflows/: ci.yml  odoo-doctor.example.yml  publish.yml
.tmp/: test_fix_applies_changescurrent  test_fix_dry_run_emits_diff_ancurrent  test_fix_is_idempotentcurrent  test_fix_requires_a_mode_flagcurrent
.tmp/c7c817e9-f0fa-40d6-9af4-1c2075f9f2b4/: odoo-doctor.toml
docs/: custom-rules.md  rules.md  stubs.md
skills/odoo-doctor-explain/: SKILL.md
src/odoo_doctor/: __init__.py
tests/: conftest.py  test_action_yaml.py  test_rule_docs_complete.py
tests/adapters/: test_pylint_odoo.py  test_ruff.py
tests/cli/: test_adapter_gating.py  test_app.py  test_baseline_cli.py  test_fix_command.py  test_format_github.py  test_min_score_and_diff.py  test_sarif_output.py  test_score_delta.py
tests/core/: test_baseline.py  test_cache.py  test_config.py  test_diagnostics.py  test_diagnostics_categories.py  test_fixer_registry.py  test_glob_matching.py  test_pipeline.py  test_scanner.py  test_scanner_cache.py  test_scoring.py  test_source.py  test_surfaces_config.py
tests/discovery/: test_addons.py  test_odoo_version.py
tests/graph/: test_build_stubs.py  test_complete_stub.py  test_module_context.py  test_resolver.py  test_source_index.py  test_stubs_versions.py
tests/integration/: test_crash_safety.py  test_e2e.py  test_end_to_end.py
tests/parsers/: test_csv_candidates.py  test_manifest.py  test_python_models.py  test_security_csv.py  test_xml_records.py  test_xml_subview.py
tests/reporters/: test_github_annotations.py  test_json_report.py  test_pr_comment.py  test_sarif.py  test_terminal.py
tests/rules/: test_confidence_regression.py  test_correctness_rules.py  test_create_write_in_loop.py  test_data_integrity_rules.py  test_eval_usage.py  test_field_no_string_on_required.py  test_fixable_metadata.py  test_frontend_rules.py  test_manifest_fixers.py  test_manifest_rules.py  test_missing_translation.py  test_n_plus_one_read.py  test_orphan_view.py  test_performance_rules.py  test_plugin_discovery.py  test_raw_sql_encoding.py  test_record_rule_without_domain.py  test_registry.py  test_search_in_loop_encoding.py  test_security_csv_ambiguity.py  test_security_rules.py  test_sudo_without_comment.py  test_suppression.py  test_unsafe_template_render.py  (+2 more)
(+90 files in other folders)
