[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-doctor"
version = "0.1.0"
description = "Unified health scoring for Odoo custom addons"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "lxml>=5.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
odoo-doctor = "odoo_doctor.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_doctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
