[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-doctor"
version = "0.3.0"
description = "Unified health scoring for Odoo custom addons"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Odoo Doctor Contributors" },
]
keywords = ["odoo", "lint", "static-analysis", "health-check", "addons"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "lxml>=5.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/minhhq-a1/odoo-doctor"
Changelog = "https://github.com/minhhq-a1/odoo-doctor/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/minhhq-a1/odoo-doctor/issues"

[project.scripts]
odoo-doctor = "odoo_doctor.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_doctor"]

# Ensure stub JSON data files are included in the wheel
[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
include = [
    "src/odoo_doctor/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

